--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- the Logo of the company "Later" -->
     <!-- <link rel="icon" href="./images/"> -->
+    <!-- <link rel="icon" href="./images/"> -->
 
     <title>GhostWeb - Design</title>
 </head>
