Working with the header.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
 <body class="light">
     <!-- Start the header and nav-bar -->
     <div class="header">
-        <div class="nav-bar"></div>
+        <div class="logo">
+            GhostWeb Design
+        </div>
+        <div class="nav-bar">
+            <a href="#">home</a>
+            <a href="#">about-us</a>
+            <a href="#">services</a>
+            <a href="#">contact-us</a>
+        </div>
+        <!-- This will be a "Hamburger-menu icon" and will work only in phones and tablets!! -->
+        <div class="mobile-nav">
+
+        </div>
     </div>
     <div class="img-wrapper">
         <!-- Put image or anything you want here -->
@@ -28,7 +40,6 @@
     </div>
     
     
-
     <!-- End the header and nav-bar -->
 
 
