adding media query for phones

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <!-- This will be a "Hamburger-menu icon" and will work only in phones and tablets!! -->
         <div class="mobile-nav">
-
+            <!-- <p>icon-here</p> -->
         </div>
     </div>
     <div class="img-wrapper">
