added css vars (colors) - and added about div in html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 
     <!-- Start the sections -->
 
+    <!-- Start about-us section -->
+    <div class="about">
+        
+    </div>
+    <!-- End about-us section -->
+
 
 
 
