added some styles to about section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
 
     <!-- Start about-us section -->
     <div class="about">
-        
+        <div class="container">
+            <div class="left"></div>
+            <span class="center">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+            <div class="right"></div>
+        </div>
     </div>
     <!-- End about-us section -->
 
