--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <div class="nav-bar">
             <a href="#">home</a>
-            <a href="#">about-us</a>
+            <a href="#about">about-us</a>
             <a href="#">services</a>
             <a href="#">contact-us</a>
         </div>
@@ -60,7 +60,7 @@
     <!-- Start the sections -->
 
     <!-- Start about-us section -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <div class="left"></div>
             <span class="center">
