added items to about section then styled them then added some animation in js file for them

--- a/index.html
+++ b/index.html
@@ -60,17 +60,56 @@
     <!-- Start the sections -->
 
     <!-- Start about-us section -->
-    <div class="about" id="about">
+    <section class="about" id="about">
         <div class="container">
-            <div class="left"></div>
-            <span class="center">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
-            <div class="right"></div>
+            <div class="head">
+                <h1>About Us</h1>
+            </div>
+            <div class="content">
+                <div class="left">
+                    <div class="item" id="item1">
+                        <i class="fa-solid fa-eye"></i>
+                    </div>
+                    <div class="item" id="item2">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eum obcaecati minus asperiores ipsa</p>
+                    </div>
+                    <div class="item"  id="item3">
+                        <i class="fa-solid fa-diagram-project"></i>
+                    </div>
+                    <div class="item"  id="item4">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos </p>
+                    </div>
+                    <div class="item"  id="item5">
+                        <i class="fa-solid fa-lock"></i>
+                    </div>
+                </div>
+                <span class="center">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+                <div class="right">
+                    <div class="item"  id="item1">
+                        <p>Lorem ipsum dolsor sit amet consectetur adipisicing elit. Doloremque delectus quo velit praesentium eum tempora fuga, suscipit ea pariatur corrupti dolorum sint magnam </p>
+                    </div>
+                    <div class="item"  id="item2">
+                        <i class="fa-solid fa-shield"></i>
+                    </div>
+                    <div class="item"  id="item3">
+                        <p>Lorem ipsum dolsor sit amet consectetur adipisicing elit. Doloremque delectus quo velit praesentium eum tempora fuga, suscipit ea pariatur corrupti dolorum sint magnam </p>
+                    </div>
+                    <div class="item"  id="item4">
+                        <i class="fa-solid fa-people-group"></i>
+                    </div>
+                    <div class="item"  id="item6">
+                        <p>Lorem ipsum dolsor sit amet consectetur adipisicing elit. Doloremque delectus quo velit praesentium eum tempora fuga, suscipit ea pariatur corrupti dolorum sint magnam </p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
     <!-- End about-us section -->
 
 
@@ -99,5 +138,7 @@
 
     <!-- linking the JavaScript file here -->
     <script src="./js/main.js"></script>
+    <!-- FontAwesome link to add awesome icons -->
+    <script src="https://kit.fontawesome.com/262f38a986.js" crossorigin="anonymous"></script>
 </body>
 </html>
