--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
     <title>GhostWeb - Design</title>
 </head>
+
+ <!-- start button an scroll  -->
+
+<div id="top"></div>
+ <!-- end button an scroll  -->
+
+
 <body class="light">
     <!-- Start the header and nav-bar -->
     <div class="header">
