Adding the footer part.

--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
     </section>
     <!-- End about-us section -->
 
-
-
+ 
 
 
 
@@ -130,9 +129,10 @@
     <!-- End of sections -->
 
 
-
-    <!-- Start the footer -->
-<div class="footer" id="footer">
+    <!-- ///////////////////////////////////////////////// -->
+    <!-- ///////// //////////////// Old footer /////////// -->
+    <!-- ///////////////////////////////////////////////// -->
+<!-- <div class="footer" id="footer">
     <div class="big">
         <div  class="div1">POWERED BY</div>
         <div   class="div2">GhostWeb DESIIGN</div>
@@ -144,9 +144,17 @@
 
 
 
-</div>
+</div> -->
 
-
+    <!-- ///////////////////////////////////////////////// -->
+    <!-- ///////// New footer //////////////////////// -->
+    <!-- ///////////////////////////////////////////////// -->
+    <!-- Start the footer -->
+    <div class="footer-new">
+        <p id="company-name">All rights reserved for &copy;
+        <span>GhostWeb Design</span></p>
+        <!-- <p id="ahmed">This is made by &copy;Ahmed Osama</p> -->
+    </div>
 
 
 
