Adding sections structure && edit the nav-bar.

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
         
         <div class="nav-bar">
-            <a href="#">home</a>
             <a href="#about">about-us</a>
-            <a href="#">services</a>
-            <a href="#">contact-us</a>
+            <a href="#services">services</a>
+            <a href="#projects">projects</a>
+            <a href="#contact-us">contact-us</a>
         </div>
         <!-- This will be a "Hamburger-menu icon" and will work only in phones and tablets!! -->
         <div class="mobile-nav">
@@ -119,7 +119,17 @@
     </section>
     <!-- End about-us section -->
 
- 
+    <section id="services">
+
+    </section>
+
+    <section id="contact-us">
+
+    </section>
+
+    <section id="projects">
+        
+    </section>
 
 
 
