adding more contenet to the banner.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     </div>
     <div class="banner">
         <h1>Front-end Web Development Company</h1>
+        <p>Thanks to a well-thought front-end professionals group, you get the software that works smoothly and user experience and user interface that users love.</p>
     </div>
     
     
