--- a/index.html
+++ b/index.html
@@ -125,6 +125,40 @@
     </section>
 
     <section id="contact-us">
+        <div class="container">
+            <div class="left">
+                <h2>CONTACT US</h2>
+                <div class="links">
+                    <a href="" class="link"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="" class="link"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="" class="link"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
+            <span class="center">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+            <div class="right">
+                <form>
+                    <div class="form-item">
+                      <input type="text" name="sender" required>
+                      <label>Name:</label>
+                    </div>
+                    <div class="form-item">
+                      <input type="text" name="email" required>
+                      <label>Email:</label>
+                    </div>
+                    <div class="form-item">
+                      <textarea class="" name="message" required></textarea>
+                      <label>Message:</label>
+                    </div>
+                    <button class="submit-btn">Send</button>  
+                  </form>
+            </div>
+        </div>
 
     </section>
 
