--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
  <!-- start button an scroll  -->
 
-<div id="top"></div>
  <!-- end button an scroll  -->
 
 
 <body class="light">
-    <!-- Start the header and nav-bar -->
+<div id="top"></div>
+<!-- Start the header and nav-bar -->
     <div class="header">
         <div class="logo">
             GhostWeb Design
@@ -124,10 +124,10 @@
 
     </section>
 
-    <section id="contact-us">
+    <section class="contact-us" id="contact-us">
         <div class="container">
-            <div class="left">
-                <h2>CONTACT US</h2>
+                <h1>CONTACT US</h1>
+                <div class="left">
                 <div class="links">
                     <a href="" class="link"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="" class="link"><i class="fa-brands fa-facebook"></i></a>
