Adding the side-menu for mobile phones.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- Linking your css files here  -->
     <link rel="stylesheet" href="./css/style.css">
 
@@ -33,7 +32,7 @@
         <div class="logo">
             GhostWeb Design
         </div>
-        
+        <!-- Desktop-screens navigation items -->
         <div class="nav-bar">
             <a href="#about">about-us</a>
             <a href="#services">services</a>
@@ -41,10 +40,22 @@
             <a href="#contact-us">contact-us</a>
         </div>
         <!-- This will be a "Hamburger-menu icon" and will work only in phones and tablets!! -->
-        <div class="mobile-nav">
-            <!-- <p>icon-here</p> -->
-            <a href="#"><i class="fa-solid fa-bars"></i></a>
+        <div class="burger-menu">
+            <a href="#" onclick="sideMenu()"><i class="fa-solid fa-bars"></i></a>
+        </div>
+        <!-- Mobile && tablets-screens navigation items -->
+        <div class="mobile-menu">
+            <div id="close-btn" onclick="closeMenu()">
+                <!-- <p>Close</p> -->
+                <p>X</p>
+            </div>
 
+            <ul>
+                <li><a href="#about"     onclick="closeMenu()">about-us</a></li>
+                <li><a href="#services"   onclick="closeMenu()">services</a></li>
+                <li><a href="#projects"   onclick="closeMenu()">projects</a></li>
+                <li><a href="#contact-us" onclick="closeMenu()" >contact-us</a></li>
+            </ul>
         </div>
     </div>
     
