--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Linking your css files here  -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- link icon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <!-- import script of "fontawesome.com" -->
     <script src="https://kit.fontawesome.com/08e510131e.js" crossorigin="anonymous"></script>
 
@@ -26,7 +29,7 @@
 
 
 <body class="light">
-<div id="top"></div>
+<div id="top"><i class='bx bx-up-arrow-alt'></i></div>
 <!-- Start the header and nav-bar -->
     <div class="header">
         <div class="logo">
