End Section Services '

--- a/index.html
+++ b/index.html
@@ -136,6 +136,60 @@
     </section>
     <!-- End about-us section -->
 
+    <!-- Start Services -->
+        <div class="services">
+            <div class="container">
+                <div class="head">
+                    <h1>Services</h1>
+                </div>
+                <div class="serv">
+                    <div class="box">
+                        <i class="fa-brands fa-html5"></i>
+                        <h3>HTML</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
+                            cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
+                            Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-brands fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
+                            cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
+                            Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-brands fa-square-js"></i>
+                        <h3>JavaScript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
+                            cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
+                            Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-brands fa-react"></i>
+                        <h3>React JS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
+                            cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
+                            Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-brands fa-node"></i>
+                        <h3>Node JS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
+                            cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
+                            Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
+                    </div>
+                    <div class="box">
+                        <i class="fa-brands fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
+                            cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
+                            Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- End Services -->
+
     <section id="services">
 
     </section>
