Some modifications to the services section

--- a/index.html
+++ b/index.html
@@ -132,49 +132,49 @@
     <!-- End about-us section -->
 
     <!-- Start Services -->
-        <div class="services">
+        <div class="services" id="services">
             <div class="container">
                 <div class="head">
                     <h1>Services</h1>
                 </div>
                 <div class="serv">
                     <div class="box">
-                        <i class="fa-brands fa-html5"></i>
+                        <i class="fa-brands fa-html5 i-1"></i>
                         <h3>HTML</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
                             cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
                             Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
                     </div>
                     <div class="box">
-                        <i class="fa-brands fa-css3-alt"></i>
+                        <i class="fa-brands fa-css3-alt i-2"></i>
                         <h3>CSS</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
                             cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
                             Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
                     </div>
                     <div class="box">
-                        <i class="fa-brands fa-square-js"></i>
+                        <i class="fa-brands fa-square-js i-3"></i>
                         <h3>JavaScript</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
                             cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
                             Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
                     </div>
                     <div class="box">
-                        <i class="fa-brands fa-react"></i>
+                        <i class="fa-brands fa-react i-4"></i>
                         <h3>React JS</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
                             cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
                             Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
                     </div>
                     <div class="box">
-                        <i class="fa-brands fa-node"></i>
+                        <i class="fa-brands fa-node i-5"></i>
                         <h3>Node JS</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
                             cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
                             Provident quasi odio veritatis natus ducimus impedit possimus tempore.</p>
                     </div>
                     <div class="box">
-                        <i class="fa-brands fa-bootstrap"></i>
+                        <i class="fa-brands fa-bootstrap i-6"></i>
                         <h3>Bootstrap</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, 
                             cupiditate pariatur? Perspiciatis saepe debitis ut repudiandae. Amet tempora error est expedita. 
