Added Social Icons In Footer

--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
         <p id="company-name">All rights reserved for &copy;
         <span>GhostWeb Design</span></p>
         <!-- <p id="ahmed">This is made by &copy;Ahmed Osama</p> -->
+        <div class="social-icon">
+            <a href="#" class="face"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#" class="git"><i class="fa-brands fa-github "></i></a>
+            <a href="#" class="linked"><i class="fa-brands fa-linkedin-in "></i></a>
+        </div>
     </div>
 
 
