--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Desktop-screens navigation items -->
         <div class="nav-bar">
             <a href="#about">about-us</a>
-            <a href="#services">services</a>
+            <a href="#skills">skills</a>
             <a href="#projects">projects</a>
             <a href="#contact-us">contact-us</a>
         </div>
@@ -54,7 +54,7 @@
 
             <ul>
                 <li><a href="#about"     onclick="closeMenu()">about-us</a></li>
-                <li><a href="#services"   onclick="closeMenu()">services</a></li>
+                <li><a href="#skills"   onclick="closeMenu()">skills</a></li>
                 <li><a href="#projects"   onclick="closeMenu()">projects</a></li>
                 <li><a href="#contact-us" onclick="closeMenu()" >contact-us</a></li>
             </ul>
@@ -131,11 +131,11 @@
     </section>
     <!-- End about-us section -->
 
-    <!-- Start Services -->
-        <div class="services" id="services">
+    <!-- Start skills -->
+        <div class="skills" id="skills">
             <div class="container">
                 <div class="head">
-                    <h1>Services</h1>
+                    <h1>skills</h1>
                 </div>
                 <div class="serv">
                     <div class="box">
@@ -183,7 +183,7 @@
                 </div>
             </div>
         </div>
-    <!-- End Services -->
+    <!-- End skills -->
 
 
     <section class="contact-us" id="contact-us">
