--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <ul>
                 <li><a href="#about"     onclick="closeMenu()">about-us</a></li>
-                <li><a href="#skills"   onclick="closeMenu()">skills</a></li>
+                <li><a href="#skills"   onclick="closeMenu()">kills</a></li>
                 <li><a href="#projects"   onclick="closeMenu()">projects</a></li>
                 <li><a href="#contact-us" onclick="closeMenu()" >contact-us</a></li>
             </ul>
@@ -135,7 +135,7 @@
         <div class="skills" id="skills">
             <div class="container">
                 <div class="head">
-                    <h1>skills</h1>
+                    <h1>Skills</h1>
                 </div>
                 <div class="serv">
                     <div class="box">
