second edit on about section resposivity

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <i class="fa-solid fa-eye"></i>
                     </div>
                     <div class="item" id="item2">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eum obcaecati minus asperiores ipsa</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur Itaque Lorem ipsum dolor sit amet </p>
                     </div>
                     <div class="item"  id="item3">
                         <i class="fa-solid fa-diagram-project"></i>
@@ -111,19 +111,19 @@
                 </span>
                 <div class="right">
                     <div class="item"  id="item1">
-                        <p>Lorem ipsum dolsor sit amet consectetur adipisicing elit. Doloremque delectus quo velit praesentium eum tempora fuga, suscipit ea pariatur corrupti dolorum sint magnam </p>
+                        <p>Lorem ipsum dolsor sit amet consectetur adipisicing elit.  </p>
                     </div>
                     <div class="item"  id="item2">
                         <i class="fa-solid fa-shield"></i>
                     </div>
                     <div class="item"  id="item3">
-                        <p>Lorem ipsum dolsor sit amet consectetur adipisicing elit. Doloremque delectus quo velit praesentium eum tempora fuga, suscipit ea pariatur corrupti dolorum sint magnam </p>
+                        <p>Lorem ipsum dolsor sit. Doloremque delectus quo velit praesentium</p>
                     </div>
                     <div class="item"  id="item4">
                         <i class="fa-solid fa-people-group"></i>
                     </div>
                     <div class="item"  id="item6">
-                        <p>Lorem ipsum dolsor sit amet consectetur adipisicing elit. Doloremque delectus quo velit praesentium eum tempora fuga, suscipit ea pariatur corrupti dolorum sint magnam </p>
+                        <p>Lorem ipsum dolsor sit amet Doloremque delectus  </p>
                     </div>
                 </div>
             </div>
