Adding href in links.

--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
                 <span class="s"></span>
                 <h1>CONTACT US</h1>
                 <div class="links">
-                    <a href="" class="link"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="" class="link"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="" class="link"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/ghost-web-design-409821262/" target="_blank" class="link"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="" target="_blank" class="link" ><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://github.com/Ghoost-web/" target="_blank" class="link"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
             <div class="right">
@@ -253,9 +253,9 @@
         <span>GhostWeb Design</span></p>
         <!-- <p id="ahmed">This is made by &copy;Ahmed Osama</p> -->
         <div class="social-icon">
-            <a href="#" class="face"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" class="git"><i class="fa-brands fa-github "></i></a>
-            <a href="#" class="linked"><i class="fa-brands fa-linkedin-in "></i></a>
+            <a href="#" target="_blank" class="face"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://github.com/Ghoost-web/" target="_blank" class="git"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/ghost-web-design-409821262/" target="_blank" class="linked"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
     </div>
 
