Adding "services" link in navbar and edit responsive.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <!-- Desktop-screens navigation items -->
         <div class="nav-bar">
             <a href="#about">about-us</a>
+            <a href="#services">services</a>
             <a href="#skills">skills</a>
             <a href="#projects">projects</a>
             <a href="#contact-us">contact-us</a>
