--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
             </div>
 
             <ul>
-                <li><a href="#about"     onclick="closeMenu()">about-us</a></li>
-                <li><a href="#skills"   onclick="closeMenu()">skills</a></li>
-                <li><a href="#projects"   onclick="closeMenu()">projects</a></li>
-                <li><a href="#contact-us" onclick="closeMenu()" >contact-us</a></li>
+                <li><a href="#about"        onclick="closeMenu()">about-us</a></li>
+                <li><a href="#services"     onclick="closeMenu()">services</a></li>
+                <li><a href="#skills"       onclick="closeMenu()">skills</a></li>
+                <li><a href="#projects"     onclick="closeMenu()">projects</a></li>
+                <li><a href="#contact-us"   onclick="closeMenu()" >contact-us</a></li>
             </ul>
         </div>
     </div>
