add services section and style it temporarily

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- End about-us section -->
 
     <!-- Start skills -->
-        <div class="skills" id="skills">
+        <section class="skills" id="skills">
             <div class="container">
                 <div class="head">
                     <h1>Skills</h1>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     <!-- End skills -->
 
 
@@ -221,7 +221,34 @@
 
 
 
-
+    <section class="services" id="services">
+        <div class="container">
+            <h1>services</h1>
+            <div class="content">
+                <div class="item">
+                    <div class="icon">
+                        <i class="fa-solid fa-mobile-screen"></i>
+                    </div>
+                    <h2 class="head">Fully Responsive</h2>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur</p>
+                </div>
+                <div class="item">
+                    <div class="icon">
+                        <i class="fa-solid fa-laptop"></i>
+                    </div>
+                    <h2 class="head">Web Design</h2>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur</p>
+                </div>
+                <div class="item">
+                    <div class="icon">
+                        <i class="fa-solid fa-ghost"></i>
+                    </div>
+                    <h2 class="head">Creative Design</h2>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- End of sections -->
