Edit the mobile menu

--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
             <a href="#" onclick="sideMenu()"><i class="fa-solid fa-bars"></i></a>
         </div>
         <!-- Mobile && tablets-screens navigation items -->
-        <div class="mobile-menu">
+        <div class="mobile-menu dark-lin2">
             <div id="close-btn" onclick="closeMenu()">
-                <p>X</p>
+                <!-- <p>X</p> -->
+                <p>></p>
             </div>
 
             <ul>
