Uncomment the project section.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
         </div>
     </section>
 
-    <!-- <section id="projects">
+    <!-- Start projects section -->
+    <section id="projects">
         
     </section> -->
 
