Add Social Icons In Section Contacts

--- a/index.html
+++ b/index.html
@@ -204,16 +204,19 @@
             <div class="right">
                 <form>
                     <div class="form-item">
-                      <input type="text" name="name" placeholder="Name" required>
+                        <i class="fa-solid fa-user-tie fa-fw"></i>
+                        <input type="text" name="name" placeholder="Name" required>
                     </div>
                     <div class="form-item">
-                      <input type="text" name="email" placeholder="Email" required>
+                        <i class="fa-solid fa-envelope"></i>
+                        <input type="text" name="email" placeholder="Email" required>
                     </div>
                     <div class="form-item">
-                      <input name="message" placeholder="Message" required></input>
+                        <i class="fa-solid fa-message"></i>
+                        <input name="message" placeholder="Message" required></input>
                     </div>
                     <button type="submit" class="submit-btn">Send</button>  
-                  </form>
+                </form>
             </div>
         </div>
     </section>
@@ -221,7 +224,7 @@
     <!-- Start projects section -->
     <section id="projects">
         
-    </section> -->
+    </section> 
 
 
 
