--- a/index.html
+++ b/index.html
@@ -223,6 +223,26 @@
 
     <!-- Start projects section -->
     <section id="projects">
+        <div class="project" id="section-Projects">
+            <div class="project-code">
+                <div class="Primitive-information"><p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h3>name the project</h3>
+                </div>
+                <div class="information "><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae fugiat nesciunt molestias! <a href="#">View Project</a></p></div>
+                <div class="Languages-Spoken"> 
+        <h4>Html</h4>
+        <h4>css</h4>
+        <h4>js</h4>
+        <h4>Node JS</h4>
+        <h4>Bootstrap</h4>
+                </div>
+            </div>
+
+            <div class="project-img"></div>
+            <!-- add photo project -->
+           </div>
+        
         
     </section> 
 
