Edit code with clean code

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </section> 
 
 
-
+    <!-- Start section services -->
     <section class="services" id="services">
         <div class="container">
             <h1>services</h1>
@@ -276,6 +276,7 @@
             </div>
         </div>
     </section>
+    <!-- End with section services -->
 
 
     <!-- End of sections -->
