Return button js code, new file js

--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
 
     <!-- linking the JavaScript file here -->
     <script src="./js/main.js"></script>
+    <!-- <script src="./js/animation.js"></script> -->
+    
     <!-- FontAwesome link to add awesome icons -->
     <script src="https://kit.fontawesome.com/262f38a986.js" crossorigin="anonymous"></script>
 </body>
